--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 <div class="avatar-border-animation">
                                     <div class="avatar-inner-border">
                                         <img
-                                            src="images/others/DuyFou.png"
+                                            src="images/home/DuyFou.png"
                                             alt="Hoàng Quốc Duy - Founder"
                                             class="founder-avatar"
                                             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -173,14 +173,14 @@
                                 </div>
                                 <div class="founder-title-badge">
                                     <i class="fas fa-crown"></i>
-                                    <span>Founder</span>
+                                    <span>Leader</span>
                                 </div>
                             </div>
 
                             <div class="founder-info">
                                 <div class="founder-header">
                                     <h3 class="founder-name">Hoàng Quốc Duy</h3>
-                                    <div class="founder-role">Founder &
+                                    <div class="founder-role">Leader &
                                         Management</div>
                                 </div>
 
@@ -437,7 +437,7 @@
                                 <div class="facility-content">
                                     <div class="facility-image">
                                         <img
-                                            src="images/others/indoor.jpg"
+                                            src="images/home/indoor.jpg"
                                             alt="Indoor Volleyball Court"
                                             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                                         <div class="placeholder-image"
@@ -477,7 +477,7 @@
                                 <div class="equipment-content">
                                     <div class="equipment-image">
                                         <img
-                                            src="images/others/mikasa.webp"
+                                            src="images/home/mikasa.webp"
                                             alt="Mikasa V200W Volleyball"
                                             style="width: 40%; height: auto; margin: -20px auto 0; display: block;"
                                             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
