--- a/shop.html
+++ b/shop.html
@@ -113,7 +113,7 @@
                     <div class="brands-grid">
                         <div class="brand-card fade-in" data-brand="nike">
                             <div class="brand-logo">
-                                <img src="images/brands/Logo_NIKE.svg.png"
+                                <img src="images/shop/brands/Logo_NIKE.svg.png"
                                     alt="Nike"
                                     onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                                 <div class="placeholder-logo"
@@ -137,7 +137,8 @@
 
                         <div class="brand-card fade-in" data-brand="adidas">
                             <div class="brand-logo">
-                                <img src="images/brands/Adidas-Logo.wine.png"
+                                <img
+                                    src="images/shop/brands/Adidas-Logo.wine.png"
                                     alt="Adidas"
                                     onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                                 <div class="placeholder-logo"
@@ -160,7 +161,7 @@
 
                         <div class="brand-card fade-in" data-brand="mizuno">
                             <div class="brand-logo">
-                                <img src="images/brands/Mizuno.png"
+                                <img src="images/shop/brands/Mizuno.png"
                                     alt="Mizuno"
                                     onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                                 <div class="placeholder-logo"
@@ -184,7 +185,7 @@
 
                         <div class="brand-card fade-in" data-brand="asics">
                             <div class="brand-logo">
-                                <img src="images/brands/Asics_Logo.svg.png"
+                                <img src="images/shop/brands/Asics_Logo.svg.png"
                                     alt="Asics"
                                     onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                                 <div class="placeholder-logo"
@@ -200,6 +201,52 @@
                                 <div class="brand-specialties">
                                     <span class="specialty-tag">Injury
                                         Prevention</span>
+                                    <span class="specialty-tag">Court
+                                        Shoes</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="brand-card fade-in" data-brand="asics">
+                            <div class="brand-logo">
+                                <img src="images/shop/brands/BEYONO.png"
+                                    alt="Asics"
+                                    onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                                <div class="placeholder-logo"
+                                    style="display: none;">
+                                    <span>ASICS</span>
+                                </div>
+                            </div>
+                            <div class="brand-info">
+                                <h3>Beyono</h3>
+                                <p>Develop and continue to conquer the markets
+                                    of other sports: Bekids,
+                                    Sports, Football, Badminton...</p>
+                                <div class="brand-specialties">
+                                    <span class="specialty-tag">Competition
+                                        Costumes</span>
+                                    <span class="specialty-tag">Court
+                                        Shoes</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="brand-card fade-in" data-brand="asics">
+                            <div class="brand-logo">
+                                <img src="images/shop/brands/wika.png"
+                                    alt="Asics"
+                                    onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                                <div class="placeholder-logo"
+                                    style="display: none;">
+                                    <span>ASICS</span>
+                                </div>
+                            </div>
+                            <div class="brand-info">
+                                <h3>Wika</h3>
+                                <p>Develop and continue to conquer the markets
+                                    of other sports: Bekids,
+                                    Sports, Football, Badminton...</p>
+                                <div class="brand-specialties">
+                                    <span class="specialty-tag">Competition
+                                        Costumes</span>
                                     <span class="specialty-tag">Court
                                         Shoes</span>
                                 </div>
