--- a/players.html
+++ b/players.html
@@ -155,7 +155,8 @@
                 <div class="footer-content">
                     <div class="footer-section">
                         <a href="index.html" class="footer-logo">
-                            <i class="fas fa-volleyball-ball"></i>
+                            <img src="images/logo/dva.png" alt="DVA Club"
+                                class="footer-logo-image">
                             <span>DVA Club</span>
                         </a>
                         <p>DVA Volleyball Club - Where talents are nurtured and
@@ -177,7 +178,7 @@
                         <ul>
                             <li><i class="fas fa-phone"></i> 0768 299 329</li>
                             <li><i class="fas fa-envelope"></i>
-                                dvavolleyball@gmail.com</li>
+                                dvavolleyballclub@gmail.com</li>
                             <li><i class="fas fa-map-marker-alt"></i> 155 Trường
                                 Chinh - Thanh Xuân - Hà Nội</li>
                         </ul>
