--- a/ranking.html
+++ b/ranking.html
@@ -577,7 +577,8 @@
                 <div class="footer-content">
                     <div class="footer-section">
                         <a href="index.html" class="footer-logo">
-                            <i class="fas fa-volleyball-ball"></i>
+                            <img src="images/logo/dva.png" alt="DVA Club"
+                                class="footer-logo-image">
                             <span>DVA Club</span>
                         </a>
                         <p>DVA Volleyball Club - Where talents are nurtured and
@@ -597,13 +598,11 @@
                     <div class="footer-section">
                         <h4>Contact</h4>
                         <ul>
-                            <li><i class="fas fa-phone"></i> 0768 299 329
-                            </li>
+                            <li><i class="fas fa-phone"></i> 0768 299 329</li>
                             <li><i class="fas fa-envelope"></i>
-                                dvavolleyball@gmail.com</li>
-                            <li><i class="fas fa-map-marker-alt"></i> 155 T155
-                                Trường Chinh - Thanh Xuân - Hà Nội
-                            </li>
+                                dvavolleyballclub@gmail.com</li>
+                            <li><i class="fas fa-map-marker-alt"></i> 155 Trường
+                                Chinh - Thanh Xuân - Hà Nội</li>
                         </ul>
                     </div>
                 </div>
