--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <section class="founder-management">
                 <div class="container">
                     <div class="section-header">
-                        <h2>Founder & Management</h2>
+                        <h2>Leader & Management</h2>
                     </div>
 
                     <div class="founder-content">
