--- a/shop.html
+++ b/shop.html
@@ -279,9 +279,6 @@
                                 title="Filter by Category">
                                 <option value>All Categories</option>
                                 <option value="shoes">Volleyball Shoes</option>
-                                <option value="protection">Protection
-                                    Gear</option>
-                                <option value="apparel">Apparel</option>
                                 <option value="accessories">Accessories</option>
                             </select>
 
@@ -292,6 +289,8 @@
                                 <option value="adidas">Adidas</option>
                                 <option value="mizuno">Mizuno</option>
                                 <option value="asics">Asics</option>
+                                <option value="wika">Wika</option>
+                                <option value="beyono">Beyono</option>
                             </select>
 
                             <select id="price-filter" class="filter-select"
