--- a/shop.html
+++ b/shop.html
@@ -123,9 +123,9 @@
                             </div>
                             <div class="brand-info">
                                 <h3>Nike</h3>
-                                <p>Just Do It - Premium athletic footwear and
-                                    apparel for professional volleyball
-                                    players</p>
+                                <p>The brand combines performance with
+                                    style, delivering premium quality gear for
+                                    both professional and amateur athletes.</p>
                                 <div class="brand-specialties">
                                     <span class="specialty-tag">Volleyball
                                         Shoes</span>
@@ -148,8 +148,9 @@
                             </div>
                             <div class="brand-info">
                                 <h3>Adidas</h3>
-                                <p>Impossible is Nothing - Innovation and
-                                    performance in every volleyball product</p>
+                                <p>Known for blending athletic performance with
+                                    contemporary design, Adidas serves millions
+                                    of customers globally.</p>
                                 <div class="brand-specialties">
                                     <span class="specialty-tag">Performance
                                         Gear</span>
@@ -171,9 +172,9 @@
                             </div>
                             <div class="brand-info">
                                 <h3>Mizuno</h3>
-                                <p>Reach Beyond - Specialized volleyball
-                                    equipment trusted by professionals
-                                    worldwide</p>
+                                <p>Mizuno combines traditional Japanese quality
+                                    with modern technology, serving athletes at
+                                    all levels.</p>
                                 <div class="brand-specialties">
                                     <span class="specialty-tag">Volleyball
                                         Shoes</span>
@@ -195,9 +196,9 @@
                             </div>
                             <div class="brand-info">
                                 <h3>Asics</h3>
-                                <p>Sound Mind, Sound Body - Advanced technology
-                                    for volleyball performance and injury
-                                    prevention</p>
+                                <p>Asics is particularly renowned for its
+                                    running shoes, which feature gel cushioning
+                                    technology and ergonomic design.</p>
                                 <div class="brand-specialties">
                                     <span class="specialty-tag">Injury
                                         Prevention</span>
@@ -218,9 +219,10 @@
                             </div>
                             <div class="brand-info">
                                 <h3>Beyono</h3>
-                                <p>Develop and continue to conquer the markets
-                                    of other sports: Bekids,
-                                    Sports, Football, Badminton...</p>
+                                <p>Beyono is a modern sports and lifestyle brand
+                                    dedicated to creating functional,
+                                    fashionable athletic wear for active
+                                    individuals.</p>
                                 <div class="brand-specialties">
                                     <span class="specialty-tag">Competition
                                         Costumes</span>
@@ -241,9 +243,9 @@
                             </div>
                             <div class="brand-info">
                                 <h3>Wika</h3>
-                                <p>Develop and continue to conquer the markets
-                                    of other sports: Bekids,
-                                    Sports, Football, Badminton...</p>
+                                <p>The brand emphasizes comfort, durability, and
+                                    style for everyday athletes and fitness
+                                    enthusiasts.</p>
                                 <div class="brand-specialties">
                                     <span class="specialty-tag">Competition
                                         Costumes</span>
