--- a/donate.html
+++ b/donate.html
@@ -169,7 +169,7 @@
 
                                 <div class="qr-container">
                                     <div class="qr-image">
-                                        <img src="images/donate/qr-code.png"
+                                        <img src="images/donate/MBB.png"
                                             alt="QR Code for Donation"
                                             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                                         <div class="qr-placeholder"
@@ -213,9 +213,9 @@
                                                 Account Holder
                                             </div>
                                             <div class="detail-value">
-                                                <span>Hoàng Quốc Duy</span>
+                                                <span>HOANG QUOC DUY</span>
                                                 <button class="copy-btn"
-                                                    onclick="copyToClipboard('Hoàng Quốc Duy')"
+                                                    onclick="copyToClipboard('HOANG QUOC DUY')"
                                                     title="Copy name">
                                                     <i class="fas fa-copy"></i>
                                                 </button>
@@ -230,9 +230,9 @@
                                             </div>
                                             <div class="detail-value">
                                                 <span
-                                                    id="account-number">0768299329001</span>
+                                                    id="account-number">0002090671521</span>
                                                 <button class="copy-btn"
-                                                    onclick="copyToClipboard('0768299329001')"
+                                                    onclick="copyToClipboard('0002090671521')"
                                                     title="Copy account number">
                                                     <i class="fas fa-copy"></i>
                                                 </button>
@@ -245,9 +245,7 @@
                                                 Bank Name
                                             </div>
                                             <div class="detail-value">
-                                                <span>MB Bank (Military
-                                                    Commercial Joint Stock
-                                                    Bank)</span>
+                                                <span>MB Bank</span>
                                                 <button class="copy-btn"
                                                     onclick="copyToClipboard('MB Bank')"
                                                     title="Copy bank name">
@@ -272,32 +270,6 @@
                                             </div>
                                         </div>
                                     </div>
-
-                                    <div class="quick-amounts">
-                                        <h4>Quick Amount Selection</h4>
-                                        <div class="amount-buttons">
-                                            <button class="amount-btn"
-                                                onclick="selectAmount(50000)">50K</button>
-                                            <button class="amount-btn"
-                                                onclick="selectAmount(100000)">100K</button>
-                                            <button class="amount-btn"
-                                                onclick="selectAmount(200000)">200K</button>
-                                            <button class="amount-btn"
-                                                onclick="selectAmount(500000)">500K</button>
-                                            <button class="amount-btn"
-                                                onclick="selectAmount(1000000)">1M</button>
-                                            <button class="amount-btn custom"
-                                                onclick="showCustomAmount()">Custom</button>
-                                        </div>
-                                        <div class="selected-amount"
-                                            id="selected-amount"
-                                            style="display: none;">
-                                            <span>Selected: </span>
-                                            <span class="amount-value"
-                                                id="amount-display">0</span>
-                                            <span> VNĐ</span>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -316,10 +288,7 @@
                                 <div class="time-filters">
                                     <button class="filter-btn active"
                                         data-period="all">All Time</button>
-                                    <button class="filter-btn"
-                                        data-period="month">This Month</button>
-                                    <button class="filter-btn"
-                                        data-period="week">This Week</button>
+
                                 </div>
 
                                 <div class="sort-options">
@@ -345,7 +314,8 @@
                                             <span>2</span>
                                         </div>
                                         <div class="donor-avatar">
-                                            <img src="images/avatars/donor2.jpg"
+                                            <img
+                                                src="images/donate/TienNamm.png"
                                                 alt="Donor 2"
                                                 onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                                             <div class="avatar-placeholder"
@@ -354,7 +324,7 @@
                                             </div>
                                         </div>
                                         <div class="donor-info">
-                                            <h4>Nguyễn Văn B</h4>
+                                            <h4>Phan Tiến Nam</h4>
                                             <div
                                                 class="donation-amount">2,500,000
                                                 VNĐ</div>
@@ -369,7 +339,8 @@
                                             <span>1</span>
                                         </div>
                                         <div class="donor-avatar">
-                                            <img src="images/avatars/donor1.jpg"
+                                            <img
+                                                src="images/donate/NguyenNgocBao.jpg"
                                                 alt="Donor 1"
                                                 onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                                             <div class="avatar-placeholder"
@@ -378,11 +349,11 @@
                                             </div>
                                         </div>
                                         <div class="donor-info">
-                                            <h4>Trần Thị A</h4>
+                                            <h4>Nguyễn Ngọc Bảo</h4>
                                             <div
                                                 class="donation-amount">5,000,000
                                                 VNĐ</div>
-                                            <div class="donation-time">1 week
+                                            <div class="donation-time">2 weeks
                                                 ago</div>
                                         </div>
                                         <div class="top-supporter-badge">
@@ -397,7 +368,7 @@
                                             <span>3</span>
                                         </div>
                                         <div class="donor-avatar">
-                                            <img src="images/avatars/donor3.jpg"
+                                            <img src="images/donate/QuocDuy.jpg"
                                                 alt="Donor 3"
                                                 onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                                             <div class="avatar-placeholder"
@@ -406,7 +377,7 @@
                                             </div>
                                         </div>
                                         <div class="donor-info">
-                                            <h4>Lê Văn C</h4>
+                                            <h4>Hoàng Quốc Duy</h4>
                                             <div
                                                 class="donation-amount">1,800,000
                                                 VNĐ</div>
