--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                 </div>
 
                                 <div class="founder-contact">
-                                    <h4>Connect with Founder</h4>
+                                    <h4>Connect with Leader</h4>
                                     <div class="contact-buttons">
                                         <a
                                             href="https://www.facebook.com/duy.hoangquoc.1/"
