--- a/ranking.html
+++ b/ranking.html
@@ -91,6 +91,8 @@
                             data-category="tournament">Tournament
                             Brackets</button>
                         <button class="category-btn"
+                            data-category="dream-team">Awards</button>
+                        <button class="category-btn"
                             data-category="player">Player Stats</button>
                         <button class="category-btn"
                             data-category="season">Season Records</button>
@@ -710,8 +712,65 @@
                                     </div>
                                 </div>
 
-                                <!-- Tranh 3-4 -->
                                 <div class="bracket-round">
+                                    <!-- Bán Kết 1 -->
+                                    <h5>Bán Kết 1</h5>
+                                    <div class="matches">
+                                        <div class="match-card upcoming">
+                                            <div class="match-teams">
+                                                <div class="team home winner">
+                                                    <span
+                                                        class="team-name">BVC
+
+                                                    </span>
+                                                    <span class="score">2</span>
+                                                </div>
+                                                <div class="team away dva-team">
+                                                    <span
+                                                        class="team-name">AVC
+
+                                                    </span>
+                                                    <span class="score">0</span>
+                                                </div>
+                                            </div>
+                                            <div class="match-info">
+                                                <span class="match-date">Aug 3,
+                                                    2025</span>
+                                                <span
+                                                    class="match-time">17:00</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- Bán Kết 2 -->
+                                    <h5>Bán Kết 2</h5>
+                                    <div class="matches">
+                                        <div class="match-card upcoming">
+                                            <div class="match-teams">
+                                                <div class="team home winner">
+                                                    <span
+                                                        class="team-name">Văn
+                                                        Quán
+
+                                                    </span>
+                                                    <span class="score">2</span>
+                                                </div>
+                                                <div class="team away dva-team">
+                                                    <span
+                                                        class="team-name">DVA
+                                                        Middle
+
+                                                    </span>
+                                                    <span class="score">1</span>
+                                                </div>
+                                            </div>
+                                            <div class="match-info">
+                                                <span class="match-date">Aug 3,
+                                                    2025</span>
+                                                <span
+                                                    class="match-time">17:00</span>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <h5>Tranh 3-4</h5>
                                     <div class="matches">
                                         <div class="match-card upcoming">
@@ -736,7 +795,7 @@
                                                 <span class="match-date">Aug 3,
                                                     2025</span>
                                                 <span
-                                                    class="match-time">17:00</span>
+                                                    class="match-time">18:30</span>
                                             </div>
                                         </div>
                                     </div>
@@ -762,12 +821,34 @@
                                                 <span class="match-date">Aug 3,
                                                     2025</span>
                                                 <span
-                                                    class="match-time">19:00</span>
+                                                    class="match-time">19:45</span>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
 
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Dream Team ---->
+                    <div class="ranking-content" id="dream-team-content">
+                        <!-- Championship Podium -->
+                        <div class="championship-section">
+                            <h3>Tournament Champions</h3>
+                            <div class="podium-container">
+                                <!-- Podium cards will be rendered by JavaScript -->
+                            </div>
+                        </div>
+
+                        <!-- Dream Team Awards -->
+                        <div class="dream-team-section">
+                            <h3>Dream Team Awards</h3>
+                            <p class="section-subtitle">Outstanding individual
+                                performances from the tournament</p>
+
+                            <div class="dream-team-grid">
+                                <!-- Award categories will be rendered by JavaScript -->
                             </div>
                         </div>
                     </div>
