--- a/news.html
+++ b/news.html
@@ -113,7 +113,7 @@
 
                         <div class="featured-article">
                             <div class="featured-image">
-                                <img src="images/news/featured-championship.jpg"
+                                <img src="images/news/VinUni.webp"
                                     alt="DVA Championship Win"
                                     onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                                 <div class="placeholder-image"
@@ -126,18 +126,18 @@
                             <div class="featured-content">
                                 <div class="article-meta">
                                     <span
-                                        class="category championship">Championship</span>
-                                    <span class="date">October 8, 2025</span>
+                                        class="category championship">Friendly
+                                        Match</span>
+                                    <span class="date">October 12, 2025</span>
                                     <span class="read-time">5 min read</span>
                                 </div>
-                                <h3>DVA Club Wins Regional Championship
-                                    2025</h3>
-                                <p>DVA Volleyball Club has achieved a historic
-                                    victory in the Regional Championship 2025,
-                                    defeating strong opponents with exceptional
-                                    teamwork and skill. This marks our biggest
-                                    achievement since the club's founding in
-                                    2022.</p>
+                                <h3>Volleyball Friendly Match</h3>
+                                <p>A friendly volleyball match between 3 teams:
+                                    DVA Club - HORIZON - Spike VinUniversity.
+                                    The match took place at House K of
+                                    VinUniversity. The match was for the purpose
+                                    of friendship and learning for all 3
+                                    teams.</p>
                                 <div class="article-stats">
                                     <div class="stat-item">
                                         <i class="fas fa-eye"></i>
@@ -152,10 +152,7 @@
                                         <span>23 comments</span>
                                     </div>
                                 </div>
-                                <button class="read-more-btn">
-                                    <span>Read Full Article</span>
-                                    <i class="fas fa-arrow-right"></i>
-                                </button>
+
                             </div>
                         </div>
                     </div>
