Fix design Player Performance Optimizations

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <section class="founder-management">
                 <div class="container">
                     <div class="section-header">
-                        <h2>Leader & Management</h2>
+                        <h2>Leader & Manager</h2>
                     </div>
 
                     <div class="founder-content">
@@ -182,7 +182,7 @@
                                 <div class="founder-header">
                                     <h3 class="founder-name">Hoàng Quốc Duy</h3>
                                     <div class="founder-role">Leader &
-                                        Management</div>
+                                        Manager</div>
                                 </div>
 
                                 <div class="founder-details">
